# diplomsuray

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  run.sh  start.bat  supervisord.conf
backend/: main.py  requirements.txt  simulation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  MapView.tsx  i18n.ts  index.css
frontend/src/components/: DynamicContainer.tsx  FluidGrid.tsx  MagneticButton.tsx  ReactiveOrchestrator.tsx
frontend/src/utils/: motionUtils.ts
