[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2x-security-sim"
version = "0.1.0"
description = "Offline-friendly V2X (Vehicle to Everything) security lab on static datasets."
requires-python = ">=3.10"
authors = [{name = "V2X Lab"}]
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scikit-learn>=1.4",
    "plotly>=5.21",
]

[project.scripts]
v2x-sim = "v2x_sim.cli:main"
v2x-dashboard = "v2x_sim.live_dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]
